# mimir

./: CMakeLists.txt
include/: block.h  mimir.h  util.h
src/: block.cpp  util.cpp
